--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                                 <option>+61 (Australia)</option>
                                 <option>+49 (Germany)</option>
                                 <option>+33 (France)</option>
+                                <input type="text" id="phone" name="phone">
                             </select>
                         </fieldset>
                     </td>
@@ -155,5 +156,6 @@
     </center>
 
 </body>
+
 
 </html>
